apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__introspection_fragment_with_authenticated_root_query.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            __schema {
                types {
                    ... TypeDef
                }
            }
        }

        fragment TypeDef on __Type {
            name
        }
        
filtered:
fragment TypeDef on __Type {
  name
}

paths: [""]
