apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__mutation.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        mutation {
            ping {
                name
            }
        }
        
filtered:

paths: ["/ping"]
