apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__non_null_list.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            me {
                id
                addresses {
                    city
                }
            }
        }
        
filtered:
query {
  me {
    id
  }
}

paths: ["/me/addresses/@"]
