apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__query_field.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            topProducts {
                type
            }

            me {
                name
            }
        }
        
filtered:
query {
  topProducts {
    type
  }
}

paths: ["/me"]
